Request APIs ready

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <div id="map" ></div>
-<div class="fab-input" layout="row" >
+<div class="fab-input hide" layout="row" >
     <md-card flex="100" layout-padding>
         <md-input-container md-no-float class="md-block">
             <input ng-model="user.address2" placeholder="Search location">
