--- a/store.html
+++ b/store.html
@@ -1,5 +1,5 @@
 <md-card style="margin:0 0 0 0;" layout="column">
-<img src="http://lorempixel.com/600/400/" flex="40" class="md-card-image" alt="Store image">
+<img ng-src="https://cartalogue-shinjanxp.c9users.io/api[[store.image_url]]" flex="40" class="md-card-image" alt="Store image">
 
 <md-card-content class="md-primary">
 <md-card-title >
