--- a/result.html
+++ b/result.html
@@ -9,7 +9,7 @@
             </md-button>
         </md-subheader>
         <md-list-item class="md-2-line" ng-repeat-start="store in master.stores" flex="100" ng-click="master.navigateTo('/store/'+store.id)">
-          <img ng-src="http://lorempixel.com/50/100" class="md-avatar" alt="[[store.name]]" />
+          <img ng-src="https://cartalogue-shinjanxp.c9users.io/api[[store.image_url]]" class="md-avatar" alt="[[store.name]]" />
           <div class="md-list-item-text" layout="column">
             <!--<h3>[[store.reg_no]]</h3>-->
             <h4>[[store.address]]</h4>
