--- a/seller.html
+++ b/seller.html
@@ -23,8 +23,8 @@
          <md-input-container flex="100">
           <div ngf-drop ngf-select ng-model="master.store.image_url" class="drop-box" ngf-drag-over-class="dragover">Click to upload image</div>
 		    <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
-			<img width='100%' ngf-src="master.store.image_url[0]" ng-if="master.store.image_url[0]">
-			<img width='100%' ng-src="https://cartalogue-shinjanxp.c9users.io/api[[master.store.image_url]]" ng-if="master.store.image_url">
+			<img class="img-holder" ngf-src="master.store.image_url[0]" ng-if="master.store.image_url[0]">
+			<img class="img-holder" ng-src="https://cartalogue-shinjanxp.c9users.io/api[[master.store.image_url]]" ng-if="master.store.image_url">
         </md-input-container>
         <div id="map" class="location-picker" flex="100" style="height:50%"></div>
         <md-button class="md-raised md-primary" type="submit" flex>Save</md-button>
