Cordova Deployment Successful

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Angular Material style sheet -->
+    <meta data-server-head-tags-static name="theme-color" content="#00b7e0">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <title>Cartalogue</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
@@ -109,6 +110,7 @@
     <script src="js/controllers.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/services.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="cordova.js"></script>
 
 </body>
 
