--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                 <span md-highlight-text="master.searchText" md-highlight-flags="^i">[[item.name]]</span>
                             </md-item-template>
                             <md-not-found>
-                                No items matching "[[master.searchText]]" were found.
-                                <md-button ng-click="">Request item</md-button>
+                                "[[master.searchText]]" were found. Please make a request.
+                                
                             </md-not-found>
                         </md-autocomplete>
                     </md-card>
