Map init fixed. Call button attempt to fix

--- a/store.html
+++ b/store.html
@@ -11,7 +11,7 @@
 
 </md-card-content>
 <md-card-actions layout="row" layout-align="center center">
-  <md-button layout="column" layout-align="center center" layout-wrap ng-click="master.triggerCall(store.contact)">
+  <md-button layout="column" layout-align="center center" layout-wrap ng-href="tel: [[store.contact]]">
         <md-icon class="material-icons" flex="100">call</md-icon><br/>
       <span flex="100">Call</span>
   </md-button>
