--- a/result.html
+++ b/result.html
@@ -15,7 +15,7 @@
             <h4>[[store.address]]</h4>
             <p>[[store.contact]]</p>
           </div>
-          <md-button class="md-secondary md-icon-button" ng-click="do($event)" aria-label="call">
+          <md-button class="md-secondary md-icon-button" ng-href="tel: [[store.contact]]" aria-label="call">
             <md-icon class="material-icons">call</md-icon>
           </md-button>
         </md-list-item>
