--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </md-toolbar>
                 <md-divider></md-divider>
                 <md-content ng-cloak>
-                    <md-list flex>
+                    <md-list>
                         <md-list-item ng-repeat="item in menu" ng-click="master.navigateTo(item.route)" ng-class="{'md-primary':item.active}">
                             <md-icon class="material-icons md-avatar-icon">[[item.icon]]</md-icon>
 
@@ -59,6 +59,12 @@
                                 <h3 class="no-margin"> [[item.name]] </h3>
                             </div>
                         </md-list-item>
+                        
+                        <span flex></span>
+                        <md-button ng-click="master.toggle_account_mode()" ng-if="master.logged_in()">Switch to 
+                            <span ng-if="master.account_mode=='customer'">Seller</span> 
+                            <span ng-if="master.account_mode=='seller'">Customer</span> 
+                        </md-button>
                     </md-list>
                 </md-content>
             </md-sidenav>
