--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
   <md-content layout-padding flex="50" flex-xs="80" flex-sm="70" class="md-whiteframe-1dp">
       <form name="userForm" ng-submit="login()" layout="row" layout-wrap layout-align="center start">
         <md-input-container class="md-block" flex="100">
-          <label>Username</label>
-          <input ng-model="user.email">
+          <label>Email</label>
+          <input ng-model="user.email" type="email">
         </md-input-container>
         <md-input-container class="md-block" flex="100">
           <label>Password</label>
